# rtb

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
bash/: CMake-UnixMakefiles-Debug  CMake-Xcode-Debug
rtb/base/: CMakeLists.txt
rtb/base/include/base/: Type.hpp
rtb/base/include/base/json/: Json.hpp
rtb/base/include/base/stl/: Optional.hpp  String.hpp  Vector.hpp
rtb/base/include/base/utils/: StrAlgo.hpp
rtb/base/source/json/: Json.cpp
rtb/base/source/utils/: StrAlgo.cpp
rtb/core/: CMakeLists.txt  pch.hpp
rtb/core/include/core/: Dummy.hpp  Type.hpp
rtb/core/include/core/json/: Json.hpp
rtb/core/include/core/stl/: Optional.hpp  String.hpp  Vector.hpp
rtb/core/include/core/utils/: StrAlgo.hpp  StringAlgo.hpp
rtb/core/source/: Dummy.cpp
rtb/core/source/json/: Json.cpp
rtb/core/source/utils/: StrAlgo.cpp  StringAlgo.cpp
rtb/proto/: CMakeLists.txt  pch.hpp
rtb/proto/include/proto/: OpenRtb.hpp  OpenRtbRef.hpp  Parser2Point3.hpp
rtb/proto/source/: OpenRtb.cpp  Parser2Point3.cpp
script/: cmake-appleclang-debug  cmakegen-appleclang-debug
test/bench/: CMakeLists.txt  Main.cpp
test/bench/base/: Bench.hpp  CMakeLists.txt  Main.cpp  StlVector.cpp  UtilsStrAlgo.cpp
test/bench/core/: Bench.hpp  CMakeLists.txt  Main.cpp  StlVector.cpp  StlVector.hpp  UtilsStrAlgo.cpp
test/bench/proto/: BidRequest2Point3Parser.cpp  CMakeLists.txt  Main.cpp  Parser2Point3.cpp  Parser2Point3.hpp
test/data/: CMakeLists.txt
test/data/include/data/: OpenRtb2Point3.hpp  OpenRtb2Point3Sample.hpp
test/data/include/test/data/: BidRequest2Point3.hpp  OpenRtb2Point3Sample.hpp
test/data/source/: BidRequest2Point3.cpp  OpenRtb2Point3.cpp  OpenRtb2Point3Sample.cpp
test/unit/: CMakeLists.txt
test/unit/base/: CMakeLists.txt  Json.cpp  StlVector.cpp  UtilsStrAlgo.cpp
test/unit/core/: CMakeLists.txt  Json.cpp  StlVector.cpp  UtilsStrAlgo.cpp  UtilsStringAlgo.cpp
test/unit/proto/: BidRequest2Point3.cpp  BidRequest2Point3Parser.cpp  CMakeLists.txt  Parser2Point3.cpp
